tests/conformance/syntax/positive/let_chaining_valid.ditt
module Syntax.LetChaining where

postulate C : Cat
id (x : C) : C = let y = x; z = y in z
