tests/conformance/syntax/negative/let_chaining_bad_separator.ditt
module Syntax.LetChainingBad where

postulate C : Cat
id (x : C) : C = let y = x, z = y in z
